--- a/app/src/main/res/layout-h600dp/activity_game3.xml
+++ b/app/src/main/res/layout-h600dp/activity_game3.xml
@@ -137,6 +137,7 @@
                 </RelativeLayout>
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/question_card_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
