--- a/app/src/main/res/layout-h720dp/activity_game3.xml
+++ b/app/src/main/res/layout-h720dp/activity_game3.xml
@@ -133,10 +133,10 @@
                         android:text=""
                         android:textColor="@color/white"
                         android:textSize="23sp" />
-
                 </RelativeLayout>
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/question_card_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
