--- a/app/src/main/res/layout-h1024dp/activity_game3.xml
+++ b/app/src/main/res/layout-h1024dp/activity_game3.xml
@@ -137,12 +137,13 @@
                 </RelativeLayout>
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/question_card_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
                     android:layout_marginTop="-26dp"
                     android:layout_marginEnd="5dp"
-                    android:minHeight="150dp"
+                    android:minHeight="180dp"
                     app:cardBackgroundColor="@color/white"
                     app:cardCornerRadius="15dp"
                     app:cardElevation="1dp"
