Added four languages: pt, hi, ur, and ar

--- a/app/src/main/res/layout-h300dp/exit_dialog_layout.xml
+++ b/app/src/main/res/layout-h300dp/exit_dialog_layout.xml
@@ -14,7 +14,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
 
             >
             <RelativeLayout
@@ -82,8 +82,8 @@
                 android:layout_height="50dp"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
 
 
                 >
@@ -106,8 +106,8 @@
                 android:layout_height="50dp"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:background="@drawable/hex_green"
 
                 >
