--- a/app/src/main/res/layout-h720dp/exit_dialog_2.xml
+++ b/app/src/main/res/layout-h720dp/exit_dialog_2.xml
@@ -82,8 +82,8 @@
                     android:paddingTop="5dp"
                     android:elevation="5dp"
                     android:background="@drawable/ic_hexnow"
-                    android:layout_marginLeft="40dp"
-                    android:layout_marginRight="40dp"
+                    android:layout_marginStart="40dp"
+                    android:layout_marginEnd="40dp"
                     >
 
 
@@ -96,8 +96,8 @@
                     android:paddingTop="5dp"
                     android:elevation="5dp"
                     android:background="@drawable/ic_hexnow"
-                    android:layout_marginLeft="40dp"
-                    android:layout_marginRight="40dp"
+                    android:layout_marginStart="40dp"
+                    android:layout_marginEnd="40dp"
                     >
 
                     <LinearLayout
@@ -149,8 +149,8 @@
             android:textAlignment="center"
             android:fontFamily="@font/ultra"
             android:layout_marginTop="0dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginBottom="30dp"
             />
 
@@ -159,8 +159,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:background="@drawable/ic_hexnow"
-                    android:layout_marginLeft="25dp"
-                    android:layout_marginRight="25dp"
+                    android:layout_marginStart="25dp"
+                    android:layout_marginEnd="25dp"
                     android:layout_marginTop="0dp"
                     android:padding="10dp"
                     >
@@ -213,7 +213,7 @@
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:textStyle="bold"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="10dp"
                     android:fontFamily="@font/arimo"/>
 
 
@@ -225,8 +225,8 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
 
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp"
             android:layout_marginTop="0dp"
             android:padding="10dp"
             >
@@ -237,7 +237,7 @@
                 android:layout_centerInParent="true"
                 android:text="@string/take_money"
                 android:textColor="@color/white"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
         </RelativeLayout>
     </LinearLayout>
