--- a/app/src/main/res/layout-land/activity_winners.xml
+++ b/app/src/main/res/layout-land/activity_winners.xml
@@ -122,9 +122,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="130dp"
 
-                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="0dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginEnd="20dp"
                 android:gravity="center_horizontal"
                 android:orientation="vertical"
                 android:paddingTop="10dp"
@@ -198,9 +198,9 @@
                 android:id="@+id/next"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
-                android:layout_marginLeft="25dp"
+                android:layout_marginStart="25dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginRight="25dp"
+                android:layout_marginEnd="25dp"
                 android:background="@drawable/hex_white"
                 android:padding="10dp"
                 android:visibility="gone">
@@ -230,8 +230,8 @@
         android:id="@+id/button_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         android:layout_alignParentBottom="true"
         android:orientation="vertical"
 
@@ -246,8 +246,8 @@
                 android:id="@+id/btn_forAnim"
                 android:layout_marginTop="30dp"
                 android:layout_marginBottom="35dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
                 android:background="@drawable/playbtn_bg"
                 >
 
@@ -258,9 +258,9 @@
                 android:id="@+id/new_game"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="30dp"
-                android:layout_marginRight="30dp"
+                android:layout_marginEnd="30dp"
                 android:layout_marginBottom="30dp"
                 android:background="@drawable/playbtn_bg">
 
@@ -274,7 +274,7 @@
                         android:layout_width="70dp"
                         android:layout_height="70dp"
                         android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginStart="10dp"
                         android:src="@drawable/ic_sports_esports_black_48dp"
                         app:tint="@color/white" />
 
@@ -287,7 +287,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="30dp"
+                            android:layout_marginStart="30dp"
                             android:orientation="vertical">
 
                             <TextView
@@ -308,9 +308,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="30dp"
+                            android:layout_marginStart="30dp"
                             android:layout_marginTop="-2dp"
-                            android:layout_marginRight="40dp"
+                            android:layout_marginEnd="40dp"
                             android:orientation="vertical">
 
                             <TextView
@@ -347,8 +347,8 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="70dp"
-            android:layout_marginRight="70dp"
+            android:layout_marginStart="70dp"
+            android:layout_marginEnd="70dp"
             android:gravity="center"
             android:layout_gravity="center"
             android:orientation="horizontal"
@@ -358,7 +358,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:layout_marginRight="10dp"
+                android:layout_marginEnd="10dp"
                 android:src="@drawable/ic_baseline_share_24"/>
 
 
