--- a/app/src/main/res/layout/activity_winners.xml
+++ b/app/src/main/res/layout/activity_winners.xml
@@ -111,9 +111,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="130dp"
 
-                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="0dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginEnd="20dp"
                 android:gravity="center_horizontal"
                 android:orientation="vertical"
                 android:paddingTop="10dp"
@@ -184,9 +184,9 @@
                 android:id="@+id/next"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
-                android:layout_marginLeft="25dp"
+                android:layout_marginStart="25dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginRight="25dp"
+                android:layout_marginEnd="25dp"
                 android:background="@drawable/hex_white"
                 android:padding="10dp"
                 android:visibility="gone">
@@ -217,8 +217,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         android:orientation="vertical"
 
         >
@@ -231,9 +231,9 @@
                 android:id="@+id/btn_forAnim"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="30dp"
-                android:layout_marginRight="30dp"
+                android:layout_marginEnd="30dp"
                 android:layout_marginBottom="35dp"
                 android:background="@drawable/playbtn_bg">
 
@@ -244,9 +244,9 @@
                 android:id="@+id/new_game"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="30dp"
-                android:layout_marginRight="30dp"
+                android:layout_marginEnd="30dp"
                 android:layout_marginBottom="30dp"
                 android:background="@drawable/playbtn_bg">
 
@@ -330,9 +330,9 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:layout_marginLeft="70dp"
+            android:layout_marginStart="70dp"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="70dp"
+            android:layout_marginEnd="70dp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/hex_blue"
             android:gravity="center"
